--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,10 @@ tunnel-config.yml
 access.log*
 error.log*
 
+# Documentation files
+github_actions_setup.md
+portfolio-plan.md
+
 #######################
 # Do NOT Ignore
 #######################
@@ -136,9 +140,7 @@ error.log*
 !website/**/*
 
 # Documentation files (NOW tracked in repo)
-!portfolio-plan.md
 !README.md
-!github_actions_setup.md
 
 # But still ignore temp files within website
 website/**/*.tmp
