--- a/docker/nginx/web1-site1.conf
+++ b/docker/nginx/web1-site1.conf
@@ -4,7 +4,7 @@ server {
     listen [::]:8084 default_server;
 
     root /var/www/web1-site1;
-    index index.html index.htm;
+    index index.php index.html index.htm;
 
     server_name _;
 
@@ -13,12 +13,32 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # Enable sub_filter for HTML content type
+    sub_filter_types text/html;
+
     location / {
         try_files $uri $uri/ =404;
+
+        # Development mode: Disable caching for hot-reload
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+
+        # Development mode: Inject browser-sync script into HTML responses
+        # This is automatically excluded from production (nginx config never deploys)
+        sub_filter '</body>' '<script async src="http://localhost:3000/browser-sync/browser-sync-client.js?v=3.0.4"></script></body>';
+        sub_filter_once on;
+        sub_filter_last_modified on;
+
+        # Disable sendfile and enable chunked transfer for sub_filter to work
+        sendfile off;
+        tcp_nopush off;
+        tcp_nodelay on;
+        gzip off;
     }
 
-    # PHP processing for counter directory
-    location ~ ^/counter/.*\.php$ {
+    # PHP processing for all PHP files
+    location ~ \.php$ {
         include snippets/fastcgi-php.conf;
         fastcgi_pass unix:/var/run/php/php8.3-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -42,8 +62,10 @@ server {
 
     # Serve GIF images with proper MIME type
     location ~ \.(gif|jpg|jpeg|png|ico)$ {
-        expires 30d;
-        add_header Cache-Control "public, immutable";
+        # In development, don't cache images for hot-reload
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
     # Error pages
