--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -19,3 +19,12 @@ autorestart=true
 priority=10
 stdout_logfile=/var/log/supervisor/nginx.log
 stderr_logfile=/var/log/supervisor/nginx.error.log
+
+[program:browsersync]
+command=/usr/local/bin/browser-sync start --config /etc/browser-sync/bs-config-simple.js
+autostart=%(ENV_ENABLE_HOT_RELOAD)s
+autorestart=true
+priority=15
+stdout_logfile=/var/log/supervisor/browsersync.log
+stderr_logfile=/var/log/supervisor/browsersync.error.log
+environment=HOME="/root",USER="root"
