--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,51 @@
-# .dockerignore
+# .dockerignore - Exclude files from Docker build context to speed up builds
+
+# Git files
 .git
 .gitignore
+
+# Documentation
 *.md
-.DS_Store
-node_modules
-.env
-.env.*
+docs/
+
+# Logs
 logs/
-.github/
+*.log
+
+# IDE and editor files
+.vscode/
+.idea/
 *.swp
 *.swo
 *~
+
+.github/
+
+# Node modules (if any exist locally)
+node_modules/
+npm-debug.log*
+
+# Environment files
+.env
+.env.*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Test files
+test/
+tests/
+
+# Docker files we don't need in context
+docker-compose.yml
+.dockerignore
+
+# Scripts that aren't used in container
+setup-*.sh
+manual-*.sh
+
+# Backup files
+*.bak
+*.backup
+*.old
