--- a/docker/php/www.conf
+++ b/docker/php/www.conf
@@ -6,6 +6,15 @@ listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
 
+; Pass environment variables to PHP scripts
+clear_env = no
+env[ENVIRONMENT] = $ENVIRONMENT
+env[DB_HOST] = $DB_HOST
+env[DB_NAME] = $DB_NAME
+env[DB_USER] = $DB_USER
+env[DB_PASSWORD] = $DB_PASSWORD
+env[DB_PORT] = $DB_PORT
+
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
